bugfix/fix overflow on mobile & tablet

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,6 @@
 @import '~antd/dist/antd.css';
+
+html,
+body {
+	overflow-x: hidden;
+}
